# webrtc-ai-calling-app

./: .env.example  .gitignore  README.md  docker-compose.yml
fastapi_service/: Dockerfile  main.py  pyproject.toml
fastapi_service/api/: health.py  sessions.py  signaling.py
fastapi_service/core/: config.py  ice_config.py  session_manager.py
fastapi_service/proto/: sfu_pb2.py  sfu_pb2_grpc.py
fastapi_service/services/: audio_pipeline.py  gemini_client.py  pion_client.py  tts_client.py  turn_manager.py
fastapi_service/utils/: audio_codec.py  logger.py
frontend_test/: index.html
pion_service/: Dockerfile  go.mod  main.go
pion_service/audio/: resampler.go  rtp_codec.go
pion_service/grpc/: server.go
pion_service/grpc/proto/: sfu.proto
pion_service/sfu/: peer_manager.go  session.go  track_handler.go
pion_service/webrtc/: ice_config.go
scripts/: test_gemini.py
