[project]
name = "fastapi-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.0",
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "grpcio>=1.81.0",
    "grpcio-tools>=1.81.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "slowapi>=0.1.9",
    "uvicorn[standard]>=0.49.0",
]
